samples/_failures_safe/1761334282_41343f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_515a9eac.c: In function ‘main’:
./samples/SAFE/__tmp_515a9eac.c:164:12: error: expected ‘)’ at end of input
  164 |     if (len
      |        ~   ^
      |            )
./samples/SAFE/__tmp_515a9eac.c:164:5: error: expected declaration or statement at end of input
  164 |     if (len
      |     ^~
